logs/pants.log
Listing '.'...
Listing './bin'...
Compiling './bin/pants_dig.py'...
***   File "./bin/pants_dig.py", line 50
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pants'...
Listing './lib/python3.5/site-packages/pants/contrib'...
Listing './lib/python3.5/site-packages/pants/http'...
Listing './lib/python3.5/site-packages/pants/util'...
Listing './lib/python3.5/site-packages/pants/web'...
Listing './lib/python3.5/site-packages/pants/web/data'...
Compiling './lib/python3.5/site-packages/pants/web/fileserver.py'...
***   File "./lib/python3.5/site-packages/pants/web/fileserver.py", line 355
    (1<<50L, u' PB'),
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pants/web/wsgi.py'...
***   File "./lib/python3.5/site-packages/pants/web/wsgi.py", line 148
    raise exc_info[0], exc_info[1], exc_info[2]
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pants-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
